Users can add a new category while creating a new principle.
Users can add or link existing principles to their goals.
Users can now filter principle ideas by category.
Users can add or link existing vision to their goals.
1731992874818
Users can now customize their weekend days or remove them if they work the same amount daily.
Added a real-time updated project budget widget to the focus session page for continuous tracking during work sessions.
Updated the project budget widget on the focus launcher to be more compact and display today's expected work time.
The weekly comparison chart for work budget vs. actual work is now better organized and clearly displays the difference between expected and completed hours.
Added "Preferences" article to the "Info" page.
Ideas moved to the "Ideas" tab on the "Tasks" page, and users can now add links and checklist to ideas same way as with tasks.
Users can reorder ideas by dragging them
1731381780369
Added a "Sessions" view for daily reports, displaying sessions grouped by day and color-coded by project.
Improved tracked time report to be more space-efficient and comfortable to navigate.
Added average workday and weekend time display next to the average day when the tracked time report is grouped by days.
Added start and end times for each workday when viewing daily reports with no project selected.
Added a line indicator for preferred end of work time when viewing daily reports in the Timesheet.
The tracked time report now remembers the selected interval for each time grouping. For example, if you change the interval on the "grouped by weeks" view, it won’t affect the interval setting on the "grouped by days" view.
1730944392505
Added a new option to switch the Goals timeline view between age-based and date-based formats.
A more comfortable and compact form for creating and editing goals.
Added a 'Start' button to tasks on the 'Tasks' page, enabling quick launch of a focus session for the selected task.