@@ -1,0 +1,47 @@
+import { infoYouTubeVideos } from '@increaser/info/infoYouTubeVideos'
+import { ProductToolEducation } from './ProductToolEducation'
+
+export const visionEducation: ProductToolEducation = {
+  title: 'Create a Clear Vision of Your Perfect Life',
+  youTubeVideoUrl: infoYouTubeVideos.vision,
+  subtitle: `A clear vision is the foundation of a fulfilling life. By defining what truly matters to you and visualizing your ideal future, you can create a roadmap to align your daily actions with your long-term aspirations. Vision attributes help you capture these dreams, turning abstract ideas into a concrete guide for personal growth and meaningful progress.`,
+  content: (
+    <>
+      <h2>What Is Vision?</h2>
+      <p>
+        Vision is where you define what your perfect life looks like. It’s built
+        around “vision attributes,” which are personal statements describing key
+        aspects of your ideal life. Each attribute includes a name, an emoji, an
+        image, and a description to help you visualize your goals clearly.
+      </p>
+      <h2>How Vision Works</h2>
+      <p>
+        The Vision tool has two subpages: "Board" and "Explore." The Board
+        subpage is your personal vision board, displaying all your vision
+        attributes as a gallery of images. Hover over an image to see its name
+        and emoji, or click to view details, edit, or delete the attribute. The
+        Explore subpage offers suggested vision attributes to inspire you. You
+        can add these suggestions directly to your board.
+      </p>
+      <h2>Connecting Vision to Goals</h2>
+      <p>
+        Vision integrates closely with the Goals tool to help you turn your
+        aspirations into actionable steps. On the Goals page, you can link
+        vision attributes to specific goals. This creates a clear connection
+        between your ideal life and the concrete actions needed to achieve it.
+        For example, if one of your vision attributes is “Healthy Lifestyle,”
+        you can set a goal to exercise daily and track your progress over time.
+        Linking vision attributes to goals ensures that your daily efforts align
+        with your bigger picture.
+      </p>
+      <h2>Why Use Vision?</h2>
+      <p>
+        Visualizing your ideal life not only motivates you but also helps
+        clarify your priorities. By turning dreams into tangible attributes, you
+        create a compass that guides your decisions and keeps you focused on
+        what truly matters. Vision isn’t just about imagining—it’s about
+        building a framework for action and progress.
+      </p>
+    </>
+  ),
+}
