@@ -1,5 +1,5 @@
-Give 10 titles for the article about "Principles" on "Info" page of the app. Should be less than 80 characters. No need to mention product name since the article will be within the app.
+Give 10 titles for the article about "Vision" on "Info" page of the app. Should be less than 80 characters. No need to mention product name since the article will be within the app.
 
 Write a short paragraph that will be used as a subtitle. You can also think of it as a first paragraph of the article. It will be located between the title and the video.
 
-We have a title, first paragraph, and a video. Now write an article explaining "Principles", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
+We have a title, first paragraph, and a video. Now write an article explaining "Vision", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
